--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -64,6 +64,16 @@ hr{
     background-color: white;
     width: 75%;
 }
+.forumCategory{
+    background-color: black;
+    border-radius: 25px;
+    width: 20%;
+    text-align: center;
+}
+.bgAForum{
+    background-color: rgb(46,46,46,1);
+    padding: 5px;
+}
 /* Small screen */
 @media screen and (max-width: 768px){
     #banner h1 {
