--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -35,7 +35,7 @@ table td{
     color: white;
 }
 #menu li a:hover{
-    color: rgb(46,46,46,0.85);
+    color: black;
 }
 .table{
     color: white;
@@ -56,7 +56,7 @@ table td{
     background-color: #011627;
 }
 .modal-header{
-    background-color: #AFD2E9 !important;
+    background-color: #011627 !important;
 }
 .ctn{
     border: 1px solid white;
